fix: index page. fix word break on .tech-params

--- a/src/assets/styles/pages/index.scss
+++ b/src/assets/styles/pages/index.scss
@@ -221,6 +221,7 @@
   word-wrap: break-word;
   overflow-wrap: break-word;
   word-break: break-word;
+  hyphens: manual;
 
   @include tablet {
     margin-bottom: 40px;
